2003-04-21  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-reports/aging.scm: fix the percentage
	  calculations so we don't get GtkCritical warnings.

2003-04-20  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/transaction.scm: Applied Tomas
	  Pospisek's patch to the transaction report (fixes bug #110598)

	* src/gnome-utils/gw-gnome-utils-spec.scm: fix the description
	  of gnc:mdi-show-progress.

	* src/business/business-gnome/dialog-customer.c:
	* src/business/business-gnome/dialog-employee.c:
	* src/business/business-gnome/dialog-job.c:
	* src/business/business-gnome/dialog-vendor.c:
	  Enable changing the "ID" for different business objects.
	  Fixes #108563.

	* src/import-export/qif-import/qif-file.scm: Don't try to
	  parse values that begin "..." because it is clearly not
	  valid (regardless of the locale).  Fixes #109868.
	
2003-04-18  Herbert Thoma  <herbie@hthoma.de>

	* src/engine/Account.c: move currency conversion to gnc-pricedb.c

	* src/engine/gnc-pricedb.c
	* src/engine/gnc-pricedb.h: add functions
	  gnc_pricedb_convert_balance_latest_price and
	  gnc_pricedb_convert_balance_nearest_price

	* src/engine/gw-engine-spec.scm: wrap functions
	  gnc_price_list_destroy, gnc_pricedb_lookup_latest_any_currency,
	  gnc_pricedb_lookup_nearest_in_time_any_currency,
	  gnc_pricedb_convert_balance_latest_price and
	  gnc_pricedb_convert_balance_nearest_price

	* src/report/report-system/commodity-utilities.scm: use
	  gnc:pricedb-convert-balance-latest-price and
	  gnc:pricedb-convert-balance-nearest-price to improve
	  multiple currency reports

	* src/report/standard-reports/advanced-portfolio.scm:
	  improve report for stocks and funds not denominated in report currency

2003-04-16  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c,
	src/import-export/hbci/hbci-interaction.c: Adapt to latest changes
	in OpenHBCI CVS. 

2003-04-14  Christian Stimming  <stimming@tuhh.de>
