@@ -1,3 +1,8 @@
+2003-04-23  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/druid-hbci-initial.c: Adapt to latest
+	OpenHBCI changes.
+
 2003-04-21  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-reports/aging.scm: fix the percentage
